...
                                <rect key="frame" x="16" y="605" width="343" height="62"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ixh-tX-pXI">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="29"/>
                                        <segments>
                                            <segment title="!"/>
                                            <segment title="!!"/>
                                            <segment title="!!!"/>
                                        </segments>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </segmentedControl>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PjT-qY-bfc">
                                        <rect key="frame" x="0.0" y="33" width="343" height="29"/>
...
                                                </connections>
                                            </button>
                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="245" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V18-Yx-Clo">
                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="29"/>
                                                <color key="backgroundColor" red="0.98328930139541626" green="0.95334082360017736" blue="0.0" alpha="0.32962328769999999" colorSpace="custom" customColorSpace="displayP3"/>
                                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="17"/>
                                                <state key="normal" title="Done">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="cancel:" destination="LdK-W7-YVA" eventType="touchUpInside" id="Zbd-Ll-NSv"/>
                                                    <action selector="done:" destination="LdK-W7-YVA" eventType="touchUpInside" id="qbq-su-jZD"/>
                                                </connections>
...
