...
    }
    
        //Mark: - Table view delegate
    
    //for checking a task
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
            let action = UIContextualAction(style: .destructive, title: "Delete"){
                (action,view, completion) in
                // TODO: Delete todo
                let todo = self.resultsController.object(at: indexPath)
                self.resultsController.managedObjectContext.delete(todo)
                //saves the new data when it deletes
                do {
...
